istio/kafka-ingress-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
  ports:
  - port: 80
    targetPort: 80
    name: http2
  - port: 443
    targetPort: 443
    name: https
  - port: 15021
    targetPort: 15021
    name: status-port
  - port: 15012
    targetPort: 15012
    name: tls
  - port: 15443
    targetPort: 15443
    name: tls-istiod
  - port: 29092
    targetPort: 29092
    name: kafka
