istio/kafka-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-gateway
  namespace: kafka
spec:
  selector:
    istio: ingressgateway # use Istio default gateway
  servers:
  - port:
      number: 29092
      name: kafka-service
      protocol: TCP
    hosts:
    - "*"
