istio/kafka-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kafka
  namespace: kafka
spec:
  host: kafka
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
