istio/kafka-external-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-external
  namespace: kafka
spec:
  hosts:
  - "*"
  gateways:
  - kafka-gateway
  tcp:
  - match:
    - port: 29092
    route:
    - destination:
        host: kafka-service
        port:
          number: 29092
