istio/kafka-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kafka-access-policy
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  action: ALLOW
  rules:
  - from:
    - source:
        ipBlocks: ["192.168.49.1/32"]
        requestPrincipals: ["*"]
    to:
    - operation:
        ports: ["29092"]
