istio/kafka-consumer-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kafka-consumer-authz
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka-consumer
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/"]
